<resources>
    <!--Application-->
    <string name="app_name">天天蔬心</string>
    <string name="store_name">店铺名称</string>
    <string name="product_name">商品名称</string>
    <string name="user_name">用户名</string>
    <string name="rmb">¥</string>
    <string name="price_default">0.00</string>

    <!--HomePageFragment-->
    <string name="nantong">南通</string>
    <string name="search_product">搜索商品</string>
    <string name="vegetables">蔬心自营</string>
    <string name="fruits">果味人生</string>
    <string name="seasoning">优鲜直达</string>
    <string name="market">便享生活</string>
    <string name="classify">分类</string>
    <string name="snacks">吃货天地</string>
    <string name="furniture">家具建材</string>
    <string name="integral">积分商城</string>
    <string name="secondhand">二手专区</string>
    <string name="service">便民服务</string>
    <string name="week_sale">本周特价</string>
    <string name="countdown">剩余</string>
    <string name="sale_more">更多>></string>
    <string name="brand_recommend">品牌推荐</string>
    <string name="fine_recommend">精品推荐</string>
    <string name="nearby_shop">附近店铺</string>
    <string name="refund">退款</string>
    <string name="refund_instructions">退款说明</string>
    <string name="apply_for_refund">申请退款</string>
    <string name="about_us">关于我们</string>
    <string name="commodity_detail">商品详情</string>
    <string name="eidt_address">编辑收货地址</string>
    <string name="my_evaluate">我的评价</string>
    <string name="evaluate">评价</string>
    <string name="reset_password">重置密码</string>
    <string name="head_line">蔬心热点</string>
    <string name="help">帮助</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="message_center">消息中心</string>
    <string name="modify_password">修改密码</string>
    <string name="modify_user_name">修改用户名</string>
    <string name="date">00.00</string>
    <string name="consumer_comment">用户评价</string>
    <string name="more_consumer_comment">更多用户评价</string>
    <string name="more_commoditydetails">更多商品详情</string>
    <string name="my_collection">我的收藏</string>
    <string name="my_comment">我的评价</string>
    <string name="order_details">订单详情</string>
    <string name="my_setting">我的设置</string>
    <string name="address_list">地址列表</string>
    <string name="free_register">免费注册</string>
    <string name="wudoll_regist_agreement">天天蔬心注册协议</string>
    <string name="search">搜索</string>
    <string name="search_result">搜索结果</string>
    <string name="settlement">结算</string>
    <string name="store">商家</string>
    <string name="comment_content">评论内容</string>
    <string name="region">区域</string>
    <string name="classification">分类</string>
    <string name="order_amount">订单合计：</string>
    <string name="surplus_money">应付金额：</string>
    <string name="my_account">我的账户</string>
    <string name="myall_order">全部订单</string>
    <string name="merchant_order">商户订单</string>
    <string name="distribution_order">配送员订单</string>
    <string name="experence_now">马上体验</string>
    <string name="enter_phonenumber_email_username">用户名/邮箱/已验证手机号</string>
    <string name="enter_password">请输入密码</string>
    <string name="forget_password">忘记密码</string>
    <string name="getback_password">找回密码</string>
    <string name="enter_terify">请输入验证码</string>
    <string name="enter_sms_terify">请输入短信验证码</string>
    <string name="change_picture">换一张</string>
    <string name="next">下一步</string>
    <string name="nickname_">昵称：</string>
    <string name="resend">重新发送</string>
    <string name="hava_problem">遇到问题？请联系客服</string>
    <string name="modify">修改</string>
    <string name="enter_old_password">请输入原密码</string>
    <string name="enter_new_password">请输入新密码</string>
    <string name="confirm_new_password">确认新密码</string>
    <string name="enter_phonenumber">请输入手机号</string>
    <string name="enter_password_register">请输入密码(6位以上英文/数字/符号组合)</string>
    <string name="get_terify">获取验证码</string>
    <string name="complete_register">完成注册</string>
    <string name="register_is_agree">注册即视为同意</string>
    <string name="agreement">《天天蔬心注册协议》</string>
    <string name="locate">定位到当前位置</string>
    <string name="office_village_scool">写字楼、小区、学校</string>
    <string name="my_shopping_address">我的收货地址</string>
    <string name="manager_shopping_address">管理收货地址</string>
    <string name="area_list">区域列表</string>
    <string name="home_page">首页</string>
    <string name="shopping_cart">购物车</string>
    <string name="mine">我的</string>
    <string name="more">更多>></string>
    <string name="add_to_cart">加入购物车</string>
    <string name="change_shopping_address">更换地址</string>
    <string name="send_to_here">送到这里</string>
    <string name="no_longer_prompt">不再提示</string>
    <string name="loading">正在加载</string>
    <string name="startsend">起送</string>
    <string name="send">配送</string>
    <string name="expert">平台专送</string>
    <string name="recommend">推荐</string>
    <string name="merchanmessage">商户消息</string>
    <string name="my_coupons">我的优惠券</string>
    <string name="coupons">优惠券</string>
    <string name="manage_address">管理地址</string>
    <string name="message">我的消息</string>
    <string name="second_hand">我的二手品</string>
    <string name="convenience_services">我的便民服务</string>
    <string name="sharetofriends">分享到朋友圈</string>
    <string name="helpcenter">帮助中心</string>
    <string name="total">总计：</string>
    <string name="amount">商品金额：</string>
    <string name="nickname">昵称</string>
    <string name="gender">性别</string>
    <string name="login_password">登陆密码</string>
    <string name="clear_cache">清除缓存</string>
    <string name="exit">退出</string>
    <string name="all_store">全部商家</string>
    <string name="discount_store">优惠商家</string>
    <string name="store_details">店铺详情</string>
    <string name="add_to_shoppingcart">添加到购物车</string>
    <string name="order_number_">订单编号：</string>
    <string name="amount_pay_">应付金额 : </string>
    <string name="order_status_">订单状态 : </string>
    <string name="order_time_">下单时间 : </string>
    <string name="pay_now">立即支付</string>
    <string name="commodity_list">商品清单</string>
    <string name="cancle_order">取消订单</string>
    <string name="cancle">取消</string>
    <string name="my_order">我的订单</string>
    <string name="goto_evaluate">去评价</string>
    <string name="search_record">搜索记录</string>
    <string name="search_nearby">搜索附近商店</string>
    <string name="regional_list">区域列表</string>
    <string name="delivery_address_">收货地址：</string>
    <string name="enter_specific_address">可填写具体收货地址</string>
    <string name="delivery_name_">收货姓名：</string>
    <string name="delivery_phone_">收货电话：</string>
    <string name="save">保存</string>
    <string name="ensure">确定</string>
    <string name="add">添加</string>
    <string name="my_address">我的地址</string>
    <string name="online_pay">在线支付</string>
    <string name="wechat_alipay">(微信/支付宝)</string>
    <string name="remarkers">备注</string>
    <string name="order_remarkers">订单备注(30字以内)</string>
    <string name="public_infomation">发布信息</string>
    <string name="title">标题</string>
    <string name="upload_image">上传封面</string>
    <string name="price">价格</string>
    <string name="name">姓名</string>
    <string name="tel">电话</string>
    <string name="personal">个人</string>
    <string name="corporate">企业</string>
    <string name="release">发布</string>
    <string name="detail_introduce">详细介绍</string>
    <string name="use_rule">使用规则</string>
    <string name="scroll_behavior">@string/appbar_scrolling_view_behavior</string>
</resources>
