<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/et_modifypasswordactivity_old"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="@dimen/size_10"
        android:layout_marginRight="@dimen/size_10"
        android:layout_marginTop="@dimen/size_20"
        android:background="@drawable/background_edittext"
        android:padding="@dimen/size_10"
        android:singleLine="true"
        android:hint="@string/enter_old_password"
        android:textColorHint="@color/colorGray_1"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/et_modifypasswordactivity_new"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="@dimen/size_10"
        android:layout_marginRight="@dimen/size_10"
        android:layout_marginTop="@dimen/size_20"
        android:background="@drawable/background_edittext"
        android:singleLine="true"
        android:hint="@string/enter_new_password"
        android:textColorHint="@color/colorGray_1"
        android:textSize="14sp"/>

    <EditText
        android:id="@+id/et_modifypasswordactivity_confirm"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="@dimen/size_10"
        android:layout_marginRight="@dimen/size_10"
        android:layout_marginTop="@dimen/size_20"
        android:background="@drawable/background_edittext"
        android:singleLine="true"
        android:hint="@string/confirm_new_password"
        android:textColorHint="@color/colorGray_1"
        android:textSize="14sp"/>

    <TextView
        android:id="@+id/tv_modifypasswordactivity_modify"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="@dimen/size_10"
        android:layout_marginRight="@dimen/size_10"
        android:layout_marginTop="@dimen/size_30"
        android:background="@drawable/background_button_round_green"
        android:gravity="center"
        android:text="@string/modify"
        android:textColor="@color/colorWrite"
        android:textSize="15sp"/>

</LinearLayout>
