<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/et_loginactivity_account"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_40"
        android:layout_marginLeft="@dimen/size_10"
        android:layout_marginRight="@dimen/size_10"
        android:layout_marginTop="@dimen/size_20"
        android:background="@drawable/background_edittext"
        android:drawablePadding="8dp"
        android:hint="@string/enter_phonenumber_email_username"
        android:textColorHint="@color/colorGray_1"
        android:singleLine="true"
        android:textCursorDrawable="@drawable/edittext_cursor"
        android:textSize="@dimen/size_text_14" />

    <EditText
        android:id="@+id/et_loginactivity_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_40"
        android:layout_marginLeft="@dimen/size_10"
        android:layout_marginRight="@dimen/size_10"
        android:layout_marginTop="@dimen/size_20"
        android:background="@drawable/background_edittext"
        android:drawablePadding="8dp"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:singleLine="true"
        android:textColorHint="@color/colorGray_1"
        android:textCursorDrawable="@drawable/edittext_cursor"
        android:textSize="@dimen/size_text_14" />

    <TextView
        android:id="@+id/tv_loginactivity_forgetpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="@dimen/size_10"
        android:layout_marginTop="@dimen/size_30"
        android:text="@string/forget_password"
        android:textColor="@color/colorGreenBefore"
        android:textSize="15sp"/>

    <TextView
        android:id="@+id/tv_loginactivity_login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_40"
        android:layout_marginLeft="@dimen/size_10"
        android:layout_marginRight="@dimen/size_10"
        android:layout_marginTop="@dimen/size_30"
        android:background="@drawable/background_button_round_green"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/colorWrite"
        android:textSize="15sp"/>
</LinearLayout>
