<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:orientation="vertical">

    <EditText
        android:id="@+id/et_getbackpasswordterifyactivity_account"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_40"
        android:layout_marginTop="@dimen/size_20"
        android:background="@drawable/background_edittext"
        android:hint="@string/enter_phonenumber_email_username"
        android:padding="@dimen/size_10"
        android:singleLine="true"
        android:textColorHint="@color/colorGray_1"
        android:textSize="@dimen/size_text_14" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_20">

        <EditText
            android:id="@+id/et_getbackpasswordterifyactivity_terify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/background_edittext"
            android:hint="@string/enter_sms_terify"
            android:padding="@dimen/size_10"
            android:singleLine="true"
            android:textColorHint="@color/colorGray_1"
            android:textSize="@dimen/size_text_14" />

        <TextView
            android:id="@+id/tv_getbackpasswordterifyactivity_changepicture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@id/et_getbackpasswordterifyactivity_terify"
            android:layout_alignEnd="@id/et_getbackpasswordterifyactivity_terify"
            android:layout_alignTop="@id/et_getbackpasswordterifyactivity_terify"
            android:layout_alignBottom="@id/et_getbackpasswordterifyactivity_terify"
            android:layout_centerVertical="true"
            android:background="@drawable/background_button_round_green"
            android:gravity="center"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:text="获取验证码"
            android:textColor="@color/colorWrite"
            android:textSize="15sp"/>
    </RelativeLayout>

    <EditText
        android:id="@+id/et_getbackpasswordterifyactivity_new"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_40"
        android:layout_marginTop="@dimen/size_20"
        android:background="@drawable/background_edittext"
        android:hint="@string/enter_new_password"
        android:padding="@dimen/size_10"
        android:textColorHint="@color/colorGray_1"
        android:textSize="@dimen/size_text_14" />

    <EditText
        android:id="@+id/et_getbackpasswordterifyactivity_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_20"
        android:background="@drawable/background_edittext"
        android:hint="@string/confirm_new_password"
        android:padding="@dimen/size_10"
        android:textColorHint="@color/colorGray_1"
        android:textSize="@dimen/size_text_14" />

    <TextView
        android:id="@+id/tv_getbackpasswordterifyactivity_modify"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_40"
        android:layout_marginTop="@dimen/size_30"
        android:background="@drawable/background_button_round_green"
        android:gravity="center"
        android:text="确认重置"
        android:textSize="15sp"
        android:textColor="@color/colorWrite" />

</LinearLayout>
